--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,15 @@ body {
 	width: 100%;
 }
 
+.logo {
+	font-size: 1.5rem;
+	font-weight: bold;
+	color: white;
+	padding: 0.5rem 0rem;
+	letter-spacing: 1px;
+	text-shadow: 2px 2px 0px black;
+}
+
 .user-btn {
 	background: linear-gradient(45deg, #0a9c0a 0%, #92c692 100%);
 }
