--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@ body {
 	width: 100%;
 }
 
+.main {
+	background-image: url('https://www.pngplay.com/wp-content/uploads/13/Green-Background-PNG.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	min-height: 100vh;
+}
+
 .logo {
 	font-size: 1.5rem;
 	font-weight: bold;
@@ -23,11 +31,11 @@ body {
 }
 
 .user-btn {
-	background: linear-gradient(45deg, #0a9c0a 0%, #92c692 100%);
+	background: linear-gradient(45deg, #4e8626 0%, #8cc969 100%);
 }
 
 .user-btn:hover {
-	background: linear-gradient(45deg, #0a9c0a 0%, #0a9c0a 100%);
+	background: linear-gradient(45deg, #73b048 0%, #8cc969 100%);
 }
 
 .cssbuttons-io-button {
@@ -36,7 +44,7 @@ body {
 	justify-content: center;
 	padding: 1em 1.4em;
 	color: white;
-	background: linear-gradient(45deg, #0a9c0a 0%, #92c692 100%);
+	background: linear-gradient(45deg, #4e8626 0%, #8cc969 100%);
 	border: none;
 	border-radius: 1em;
 }
@@ -52,4 +60,3 @@ body {
 	background-clip: text;
 	color: transparent;
 }
-
